# assistant

./: .gitignore  CLAUDE.md  IMPLEMENTATION_STATUS.md  INDEX.md  README.md  REVIEW_CHECKLIST.md  pyproject.toml  pytest.ini
.claude/: project.json
improvements/: 20251114_142300_code_review_and_improvement_plan.md
improvements/C2_Resource_Cleanup_Race_Condition/: C2_RESOURCE_CLEANUP_FIX_SUMMARY.md  FINAL_SUMMARY.txt  TESTING_IMPLEMENTATION_SUMMARY.md
improvements/C3_Python_REPL_Tool/: C3_PYTHON_REPL_CONDITIONAL.md  FINAL_SUMMARY.txt  IMPLEMENTATION_STEPS.md  README.md  TESTING_DETAILS.md
improvements/C4_Unhandled_Invocation_Failures/: API_REFERENCE.md  IMPLEMENTATION.md  QUICK_START.md
improvements/H1_Incomplete_Type_Hints/: IMPLEMENTATION.md  TECHNICAL_DETAILS.md  TEST_SUMMARY.md
improvements/H2_No_Error_Handling_for_Tool_Execution/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  TECHNICAL_REFERENCE.md
src/: app.py  config.py  llm_invocation.py  logging_config.py  sidekick.py  sidekick_tools.py  tool_error_handler.py  validation.py
src/assistant.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
tests/: README.md  __init__.py  conftest.py  test_hardcoded_model_and_endpoints_h4.py  test_llm_invocation_c4.py  test_logging_framework_h6.py  test_missing_input_validation_h5.py  test_python_repl_tool.py  test_sidekick_cleanup.py  test_timeout_configuration_h3.py  test_tool_error_handling.py  test_type_hints.py
tests_integration/: __init__.py  conftest.py  test_sidekick_cleanup_integration.py
training/: langgraph_agent.ipynb  langgraph_detailed_agents.ipynb
(+12 files in other folders)
